--- a/index.html
+++ b/index.html
@@ -50,28 +50,32 @@
     </div>
   </nav>
   <main>
+    <div>
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       </div>
-      <div class="col-lg-12">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img style="height:600px;" src="./images/never-stop-learning-3653430_1280.jpg" class="d-block w-100" alt="...">
+      <div class="col-lg-6">
+      <div class="carousel-inner ">
+        <div class="carousel-item active col-lg-6 col-md-6">
+          <img  style="height:600px; width: auto;" src="./images/never-stop-learning-3653430_1280.jpg" class="d-block w-100  " alt="...">
           <div class="carousel-caption text-start" style="top: 20vh">
-            <h1 class="fs-2% col-xs-12">
+        <div>
+            <h1 style="text-align: left; margin-bottom: 50px;" class="col-lg-6">
               Kerala's No.1 IT Finishing School<br />100% Placement Assistance
-            </h1>
-            <p class="col-xs-12" style="width: 65%">
+            </h1> 
+        
+            <p >
               We at LUMINAR TECHNOLAB offers best software training and
-              placement in emerging technologies like BIG DATA, Data Science,
-              Machine Learning,PYTHON, Software Testing.
-            </p>
-            <button id="a1" class="btn btn-lg btn-primary rounded-5 col-xs-12 " style="background-color: #5e068a; border: none">
+              placement in emerging technologies like BIG DATA, Data Science, 
+               Machine Learning,PYTHON, Software Testing. 
+            </p><br>
+            <button id="a2" class="btn btn-lg btn-primary rounded-5  " style="background-color: #5e068a; border: none">
               VIEW COURSES
             </button>
           </div><br>
+        </div><br><br><br>
           <div class="container mt-2">
             <button type="button" class="btn btn-lg btn-primary rounded-0 w-30px" data-bs-toggle="modal"
               data-bs-target="#exampleModal" style="background-color: #5e068a; border: none">
@@ -79,28 +83,28 @@
             </button>
           </div>
         </div>
-      
-        <div class="col-lg-12 ">
+        <div class=" col-xs-12">
+        <div class="col-lg-12 col-ms-12 col-s-12 col-xs-12">
           <div class="carousel-inner">
-            <div class="carousel-item ">
-              <img style="height:600px;" src="./images/WhatsApp Image 2023-07-09 at 23.24.21.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item col-lg-6 col-md-6">
+              <img style="height:600px;" src="./images/WhatsApp Image 2023-07-09 at 23.24.21.jpg" class="d-block w-100 " alt="...">
               <div class="carousel-caption text-start" style="top: 20vh">
-                <h1 class="fs-2% col-xs-12">
-                  Data Science, ML &amp; AI<br />
-                  Big Data - Hadoop &amp; Spark <br />
-                  Python Data Science
+                <h1 style="text-align: left; margin-bottom: 50px;" class="col-lg-6">
+                  Data Science, ML &amp; AI
+              Big Data - Hadoop &amp; Spark 
+              Python Data Science
                 </h1>
-                <p class=" col-xs-12" style="width: 65%">
+                <p >
                   We LUMINAR TECHNOLAB offers best software training and placement
                   in emerging technologies like Big Data, Hadoop, Spark,Data
                   Scince, Machine Learning, Deep Learning and AI.
                 </p>
-                <button id="a2" class="btn btn-lg btn-primary rounded-5 col-xs-12 " style="background-color: #5e068a; border: none">
+                <button id="a2" class="btn btn-lg btn-primary rounded-5  " style="background-color: #5e068a; border: none">
                   VIEW COURSES
                 </button>
               </div>
             </div>
-    </div>
+    </div> 
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -109,7 +113,8 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div><br>
+    </div><br><br><br>
+   
     <div class="container mt-2">
       <button type="button" class="btn btn-lg btn-primary rounded-0 w-30px" data-bs-toggle="modal"
         data-bs-target="#exampleModal" style="background-color: #5e068a; border: none">
